--- a/15_game/15_game/css/common_form.css
+++ b/15_game/15_game/css/common_form.css
@@ -98,6 +98,6 @@ body {
     width: 76%;
     margin: 0 auto 2px;
     text-align: left;
-    font-size: .2em;
+    font-size:  12px;
     color: #f00;
 }
